--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <!-- main-visual -->
         <div class="main-visual" id="#">
           <div class="main-visual-inner">
-            <p class="main-visual-title">石岡　駿汰</p>
+            <p class="main-visual-title">Sony and Lawson</p>
             <p class="main-visual-subtitle">PORTFOLIO</p>
             <div class="main-visual-profile">
-              <p class="main-visual-img">
-                <img src="portfolio/img/org_profile.png" alt="自画像" />
-              </p>
-              <p class="main-visual-text">
+              <a class="main-visual-img" href="https://ja.wikipedia.org/wiki/メインページ">
+        <img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="自画像" width="150" height="150">
+      </a>
+      <p class="main-visual-text">
                 生後228か月の人間。市内の4店舗のローソンで店長ではないのに権力を振りかざしているリーダースタッフ<br />
                 日々後輩の育成に尽力し、どうしたらいいか、ダメならばどうすればよくなるかを考え、お客様から愛されるスタッフを作り上げる<br />
               </p>
@@ -58,6 +58,8 @@
                 <div class="skill-body">
                   <h3 class="skill-name">資格</h3>
                   <p class="skill-text">
+                    日本漢字能力検定準２級<br>
+                    日本実用英語技能検定３級<br>
                     情報活用検定１級
                   </p>
                 </div>
@@ -73,9 +75,11 @@
                     ローソン札幌宮の森３条１丁目店（２０２３年１０月～２０２５年１月）<br>
                     ローソン札幌円山南１条店（２０２４年５月～７月）<br>
                     ローソン札幌北５条西２８丁目店（２０２４年８月、１１月）<br>
-                    ローソン札幌美しが丘店（２０２５年１月～３月）<br>
+                    ローソン札幌美しが丘店（２０２５年１月～３月）<br><br>
 
-                    ２０２４年５月２５日～　　サブリーダースタッフを何故か経験せず、リーダースタッフに昇格
+                    ２０２４年５月：サブリーダーを何故か経験せず、リーダースタッフに昇格
+                    <br>
+                    ２０２５年４月２２日：万引き班を取り押さえる
                   </p>
                 </div>
               </div>
@@ -98,7 +102,8 @@
                 <div class="skill-body">
                   <h3 class="skill-name">そのほか</h3>
                   <p class="skill-text">
-                    普通救急救命資格Ⅰ　２０２４年１１月取得
+                    普通救急救命資格Ⅰ　２０２４年１１月取得 <br>
+                    Wikipedia編集者・巻き戻し者
                   </p>
                 </div>
               </div>
@@ -112,10 +117,10 @@
           <div class="inner">
             <h2 class="title">WORKS</h2>
             <div class="works-list">
-              <a class="works-item btn-denim" href="#">ENSYU 01</a>
-              <a class="works-item btn-denim" href="#">ENSYU 02</a>
-              <a class="works-item btn-denim" href="#">ENSYU 03_1</a>
-              <a class="works-item btn-denim" href="#">ENSYU 03_2</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu01.html">ENSYU 01</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu02.html">ENSYU 02</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu03_1.html">ENSYU 03_1</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu03_2.html">ENSYU 03_2</a>
               <a class="works-item btn-denim" href="#">ENSYU 04_1</a>
               <a class="works-item btn-denim" href="#">ENSYU 04_2</a>
               <a class="works-item btn-denim" href="#">ENSYU 04_3</a>
