--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul class="header-nav-list">
               <li class="header-nav-item"><a href="#skill">SKILL</a></li>
               <li class="header-nav-item"><a href="#works">WORKS</a></li>
+              <li class="header-nav-item"><a href="portfolio/unnotfound.html">？</a></li>
             </ul>
           </nav>
         </div>
@@ -36,6 +37,7 @@
         <img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="自画像" width="150" height="150">
       </a>
       <p class="main-visual-text">
+
                 生後228か月の人間。市内の4店舗のローソンで店長ではないのに権力を振りかざしているリーダースタッフ<br />
                 日々後輩の育成に尽力し、どうしたらいいか、ダメならばどうすればよくなるかを考え、お客様から愛されるスタッフを作り上げる<br />
               </p>
@@ -49,7 +51,7 @@
         <!-- skill -->
         <section class="skill section" id="skill">
           <div class="inner">
-            <h2 class="title">SKILL</h2>
+            <h2 class="title">こんなひとです</h2>
             <div class="skill-list">
               <div class="skill-item">
                 <p class="skill-img">
@@ -79,7 +81,7 @@
 
                     ２０２４年５月：サブリーダーを何故か経験せず、リーダースタッフに昇格
                     <br>
-                    ２０２５年４月２２日：万引き班を取り押さえる
+                    ２０２５年４月２２日：万引き犯を取り押さえる
                   </p>
                 </div>
               </div>
@@ -97,7 +99,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/icon_skill.png" alt="" />
+                  <img src="portfolio/img/Wikimedia-logo.svg.png" alt="Wikimedia財団のロゴ" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">そのほか</h3>
@@ -121,9 +123,9 @@
               <a class="works-item btn-denim" href="2.ensyu\ensyu02.html">ENSYU 02</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu03_1.html">ENSYU 03_1</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu03_2.html">ENSYU 03_2</a>
-              <a class="works-item btn-denim" href="#">ENSYU 04_1</a>
-              <a class="works-item btn-denim" href="#">ENSYU 04_2</a>
-              <a class="works-item btn-denim" href="#">ENSYU 04_3</a>
+              <a class="works-item btn-denim" href="2.enysu\ensyu04-1.html">ENSYU 04_1</a>
+              <a class="works-item btn-denim" href="2.enysu\ensyu04-2.html">ENSYU 04_2</a>
+              <a class="works-item btn-denim" href="2.enysu\ensyu04-3.html">ENSYU 04_3</a>
               <a class="works-item btn-denim" href="#">ENSYU 05</a>
               <a class="works-item btn-denim" href="#">ENSYU 06_1</a>
               <a class="works-item btn-denim" href="#">ENSYU 06_2</a>
