--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <ul class="header-nav-list">
               <li class="header-nav-item"><a href="#skill">SKILL</a></li>
               <li class="header-nav-item"><a href="#works">WORKS</a></li>
-              <li class="header-nav-item"><a href="portfolio/unnotfound.html">？</a></li>
+              <li class="header-nav-item"><a href="portfolio/unnotfound.html">more</a></li>
+              <li class="header-nav-item"><a href="https://ja.wikipedia.org/wiki/メインページ">Wikipedia</a></li>
             </ul>
           </nav>
         </div>
@@ -33,8 +34,8 @@
             <p class="main-visual-title">Sony and Lawson</p>
             <p class="main-visual-subtitle">PORTFOLIO</p>
             <div class="main-visual-profile">
-              <a class="main-visual-img" href="https://ja.wikipedia.org/wiki/メインページ">
-        <img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="自画像" width="150" height="150">
+              <a class="main-visual-img">
+        <img src="portfolio/img/oira.png" alt="自画像" width="150" height="150">
       </a>
       <p class="main-visual-text">
 
@@ -55,29 +56,33 @@
             <div class="skill-list">
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/icon_skill.png" alt="" />
+                  <a href="https://ja.wikipedia.org/wiki/メインページ"><img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="Wikipediaのロゴ" />
+                    </a>
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">資格</h3>
                   <p class="skill-text">
                     日本漢字能力検定準２級<br>
                     日本実用英語技能検定３級<br>
-                    情報活用検定１級
+                    情報活用検定１級<br>
+                    普通救急救命資格Ⅰ
                   </p>
                 </div>
               </div>
               <div class="skill-item">
                 <p class="skill-img">
+                  <a href="https://www.lawson.co.jp/">
                   <img src="portfolio/img/icon_skill.png" alt="" />
+                  </a>
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">アルバイト経験</h3>
                   <p class="skill-text">
-                    ローソン札幌美しが丘３条店（２０２１年１０月～）<br>
-                    ローソン札幌宮の森３条１丁目店（２０２３年１０月～２０２５年１月）<br>
-                    ローソン札幌円山南１条店（２０２４年５月～７月）<br>
-                    ローソン札幌北５条西２８丁目店（２０２４年８月、１１月）<br>
-                    ローソン札幌美しが丘店（２０２５年１月～３月）<br><br>
+                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/144934/?&his=cb">ローソン札幌美しが丘３条店</a>（２０２１年１０月～）<br>
+                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/355594/?&his=cb">ローソン札幌宮の森３条１丁目店</a>（２０２３年１０月～２０２５年１月）<br>
+                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/010694/?&his=cb">ローソン札幌円山南１条店</a>（２０２４年５月～７月）<br>
+                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/227040/?&his=cb">ローソン札幌北５条西２８丁目店</a>（２０２４年８月、１１月）<br>
+                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/144963/?&his=cb">ローソン札幌美しが丘店</a>（２０２５年１月～３月）<br><br>
 
                     ２０２４年５月：サブリーダーを何故か経験せず、リーダースタッフに昇格
                     <br>
@@ -104,8 +109,9 @@
                 <div class="skill-body">
                   <h3 class="skill-name">そのほか</h3>
                   <p class="skill-text">
-                    普通救急救命資格Ⅰ　２０２４年１１月取得 <br>
-                    Wikipedia編集者・巻き戻し者
+                    Wikipedia編集者・巻き戻し者<br>
+                    日本Wikipedia・Community所属<br>
+                    カーナビが案内する道より渋滞せず最速に到着する経路を案内できる
                   </p>
                 </div>
               </div>
@@ -126,18 +132,18 @@
               <a class="works-item btn-denim" href="2.enysu\ensyu04-1.html">ENSYU 04_1</a>
               <a class="works-item btn-denim" href="2.enysu\ensyu04-2.html">ENSYU 04_2</a>
               <a class="works-item btn-denim" href="2.enysu\ensyu04-3.html">ENSYU 04_3</a>
-              <a class="works-item btn-denim" href="#">ENSYU 05</a>
-              <a class="works-item btn-denim" href="#">ENSYU 06_1</a>
-              <a class="works-item btn-denim" href="#">ENSYU 06_2</a>
-              <a class="works-item btn-denim" href="#">ENSYU 07_1</a>
-              <a class="works-item btn-denim" href="#">ENSYU 07_2</a>
-              <a class="works-item btn-denim" href="#">ENSYU 07_3</a>
-              <a class="works-item btn-denim" href="#">ENSYU 08_1</a>
-              <a class="works-item btn-denim" href="#">ENSYU 08_2</a>
-              <a class="works-item btn-denim" href="#">ENSYU 09_1</a>
-              <a class="works-item btn-denim" href="#">ENSYU 09_2</a>
-              <a class="works-item btn-denim" href="#">ENSYU 09_3</a>
-              <a class="works-item btn-denim" href="#">ENSYU 09_4</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu05.html">ENSYU 05</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu06_1.html">ENSYU 06_1</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu06_2_1.html">ENSYU 06_2</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu07_1.html">ENSYU 07_1</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu07_2.html">ENSYU 07_2</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu07_3.html">ENSYU 07_3</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu08_1.html">ENSYU 08_1</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu08_2.html">ENSYU 08_2</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu09_1.html">ENSYU 09_1</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu09_2.html">ENSYU 09_2</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu09_3.html">ENSYU 09_3</a>
+              <a class="works-item btn-denim" href="2.ensyu\ensyu09_4.html">ENSYU 09_4</a>
 
               <a class="works-item btn-box" href="#">CHALLENGE1</a>
               <a class="works-item btn-box" href="#">CHALLENGE2</a>
