--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
           </h1>
           <nav class="headerheader-nav">
             <ul class="header-nav-list">
+              <li class="header-nav-item"><a href="#about">ABOUT</a></li>
               <li class="header-nav-item"><a href="#skill">SKILL</a></li>
               <li class="header-nav-item"><a href="#works">WORKS</a></li>
+              <li class="header-nav-item"><a href="#PHOTO">PHOTO</a></li>
+              <li class="header-nav-item"><a href="#contact">CONTACT</a></li>
               <li class="header-nav-item"><a href="portfolio/unnotfound.html">more</a></li>
               <li class="header-nav-item"><a href="https://ja.wikipedia.org/wiki/メインページ">Wikipedia</a></li>
             </ul>
@@ -31,40 +34,13 @@
         <!-- main-visual -->
         <div class="main-visual" id="#">
           <div class="main-visual-inner">
-            <p class="main-visual-title">Sony and Lawson</p>
+            <p class="main-visual-title">石岡　駿汰</p>
             <p class="main-visual-subtitle">PORTFOLIO</p>
             <div class="main-visual-profile">
               <a class="main-visual-img">
         <img src="portfolio/img/oira.png" alt="自画像" width="150" height="150">
       </a>
-      <p class="main-visual-text" id="age">
-
-                生後 0 か月
-
-<script>
-  // 🎂 君の誕生日をここに入力！（例：2005年1月15日）
-  const birthDate = new Date(2006, 0, 18); // 月は0が1月なので注意！
-
-  const now = new Date();
-  const totalMonths =
-    (now.getFullYear() - birthDate.getFullYear()) * 12 +
-    (now.getMonth() - birthDate.getMonth());
-
-  const ageElement = document.getElementById("age");
-  let currentMonth = 0;
-
-  function countUpMonths() {
-    if (currentMonth > totalMonths) return;
-
-    ageElement.textContent = `生後 ${currentMonth} か月の人間。市内の4店舗のローソンで店長ではないのに権力を振りかざしているリーダースタッフ
-                日々後輩の育成に尽力し、どうしたらいいか、ダメならばどうすればよくなるかを考え、お客様から愛されるスタッフを作り上げる。`;
-    currentMonth++;
-
-    setTimeout(countUpMonths, 10); // 数字の上がり方を調整したいならこの値を変えてOK！
-  }
-
-  countUpMonths();
-</script>
+      <p class="main-visual-text">生後232か月の人間。学校とバイトをどうにか両立させて必死に生きる人間。<br />バイト先では、市内の4店舗のローソンで店長ではないのに権力を振りかざしているリーダースタッフ</p>
 
             </div>
           </div>
@@ -72,63 +48,81 @@
         <!-- /main-visual -->
 
         <!-- /about -->
+        <section class="about section" id="about">
+          <div class="inner">
+            <h2 class="title">ABOUT</h2>
+            <table>
+              <tr>
+                <th>趣味</th>
+                <td>カラオケ・商業施設めぐり・北海道の道路マニア</td>
+              </tr>
+              <tr>
+                <th>アルバイト</th>
+                <td><a href="https://www.e-map.ne.jp/p/lawson/dtl/144934/?&his=cb">ローソン札幌美しが丘３条店</a></td>
+              </tr>
+              <tr>
+                <th>部活動</th>
+                <td>ソフトテニス部（中学校）</td>
+              </tr>
+              <tr>
+                <th>自己啓発</th>
+                <td>読書</td>
+              </tr>
+              <tr>
+                <th>信条</th>
+                <td>しない善よりする偽善</td>
+              </tr>
+            </table>
+          </div>
 
+        </section>
         <!-- skill -->
         <section class="skill section" id="skill">
           <div class="inner">
-            <h2 class="title">こんなひとです</h2>
+            <h2 class="title">SKILL</h2>
             <div class="skill-list">
               <div class="skill-item">
                 <p class="skill-img">
-                  <a href="https://ja.wikipedia.org/wiki/メインページ"><img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="Wikipediaのロゴ" />
+                  <img src="portfolio/img/25125_color.png" alt="" />
                     </a>
+                </p>
+                <div class="skill-body">
+                  <h3 class="skill-name">HTML/CSS</h3>
+                  <p class="skill-text">
+                    HTML/CSSは高校１年の時から独学で習得していたので、授業内容もやったところがメインだったのでサクサク進んだ。<br>今後はオリジナルの面白い要素がたくさん詰まったサイトを作りたい。
+                  </p>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p class="skill-img">
+                  <img src="portfolio/img/25125_color.png" alt="" />
+                </p>
+                <div class="skill-body">
+                  <h3 class="skill-name">Python/Java</h3>
+                  <p class="skill-text">
+                    Pythonは１年生の１０月より授業で文法などを学習。<br>
+                    Javaは１１月より授業で学習。<br> PythonとJavaの文法の違いで最初は戸惑いながらも、手探りで何とか習得。<br>
+                    PythonとJavaだと、Pythonのほうが得意なので、今後実施するPaizaランクチャレンジでもハイスコアを目指したい。
+                  </p>
+                </div>
+              </div>
+              <div class="skill-item">
+                <p class="skill-img">
+                  <img src="portfolio/img/25125_color.png" alt="" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">資格</h3>
                   <p class="skill-text">
-                    日本漢字能力検定準２級<br>
+                    情報活用試験１級<br>
+                    日本漢字能力検定３級<br>
                     日本実用英語技能検定３級<br>
-                    情報活用検定１級<br>
-                    普通救急救命資格Ⅰ
+                    救急救命資格Ⅰ
                   </p>
                 </div>
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <a href="https://www.lawson.co.jp/">
-                  <img src="portfolio/img/icon_skill.png" alt="" />
-                  </a>
-                </p>
-                <div class="skill-body">
-                  <h3 class="skill-name">アルバイト経験</h3>
-                  <p class="skill-text">
-                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/144934/?&his=cb">ローソン札幌美しが丘３条店</a>（２０２１年１０月～）<br>
-                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/355594/?&his=cb">ローソン札幌宮の森３条１丁目店</a>（２０２３年１０月～２０２５年１月）<br>
-                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/010694/?&his=cb">ローソン札幌円山南１条店</a>（２０２４年５月～７月）<br>
-                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/227040/?&his=cb">ローソン札幌北５条西２８丁目店</a>（２０２４年８月、１１月）<br>
-                    <a href="https://www.e-map.ne.jp/p/lawson/dtl/144963/?&his=cb">ローソン札幌美しが丘店</a>（２０２５年１月～３月）<br><br>
-
-                    ２０２４年５月：サブリーダーを何故か経験せず、リーダースタッフに昇格
-                    <br>
-                    ２０２５年４月２２日：万引き犯を取り押さえる
-                  </p>
-                </div>
-              </div>
-              <div class="skill-item">
-                <p class="skill-img">
-                  <img src="portfolio/img/icon_skill.png" alt="" />
-                </p>
-                <div class="skill-body">
-                  <h3 class="skill-name">趣味</h3>
-                  <p class="skill-text">
-                    一人旅：３月に網走に行き、帰り旭川にて乗り換えしようと思ったが、乗り換えした汽車（特急ライラック４０号）が運休し、帰れなくなる。<br>
-                    商業施設めぐり：ウイングベイ小樽、三井アウトレットパーク札幌北広島、イオンモール旭川駅前etc...
-                  </p>
-                </div>
-              </div>
-              <div class="skill-item">
-                <p class="skill-img">
-                  <img src="portfolio/img/Wikimedia-logo.svg.png" alt="Wikimedia財団のロゴ" />
+                  <img src="portfolio/img/25125_color.png" alt="Wikimedia財団のロゴ" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">そのほか</h3>
@@ -175,6 +169,39 @@
           </div>
         </section>
         <!-- /works -->
+                <!-- PHOTO -->
+                <section class="Photo section" id="PHOTO">
+                  <div class="inner">
+                    <h2 class="title">PHOTO</h2>
+                    <div class="works-list">
+                      <img src="portfolio/img/boyo_nakayama.JPEG" alt="望洋中山の駐車場" width="354" height="265" hspace="5" vspace="5">
+                      <img src="portfolio/img/wingbay-otaru_bayside.JPEG" alt="ウイングベイ小樽横のベイサイド" width="354" height="265" hspace="5" vspace="5">
+                      <img src="portfolio/img/hombetu_ic.JPEG" alt="本別IC出口" width="354" height="265" hspace="5" vspace="5"> <br>
+                      <img src="portfolio/img/aeon_asahikawa_station.JPEG" alt="イオンモール旭川駅前"  width="354" height="265" hspace="5" vspace="5">
+                      <img src="portfolio/img/snow_storm.JPEG" alt="ちょいふぶき"  width="354" height="265" hspace="5" vspace="5">
+                      <img src="portfolio/img/super_snow_storm.JPEG" alt="猛吹雪" width="354" height="265" hspace="5" vspace="5">
+                    </div>
+                  </div>
+                </section>
+
+        <!-- contact -->
+        <section class="contact-section" id="contact">
+          <form action="#">
+            <h2 class="title">CONTACT</h2>
+            <p class="form-title">お名前<span class="must">必須</span></p>
+            <input type="text" name="shimei" size="98" required>
+            <p class="form-title">メールアドレス<span class="must">必須</span></p>
+            <input type="email" name="mail" size="98" required>
+            <p class="form-title">電話番号</p>
+            <input type="tel" name="tel" size="98" required>
+            <p class="form-title">お問い合わせ<span class="must">必須</span></p>
+            <textarea name="remarks" cols="100" rows="4" maxlength="40" required></textarea>
+            <br>
+            <div class="btn-item">
+            <input class="btn" type="submit" onclick="alert('ご登録ありがとうございました'); return false;" value="送信">
+            </div>
+          </form>
+        </section>
 
         <div class="page-top">
           <span class="material-icons-outlined">Page Top</span>
@@ -182,7 +209,7 @@
       </main>
       <!-- footer -->
       <footer class="footer">
-        <div class="copyright">&copy; HCS 〇〇科.</div>
+        <div class="copyright">&copy; HCS システムエンジニア科.</div>
       </footer>
       <!-- /footer -->
     </div>
