--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
     <title>PORTFOLIO</title>
-    <link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css\style.css" media="all" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="portfolio/img/favicon.ico" />
   </head>
 
@@ -23,8 +23,7 @@
               <li class="header-nav-item"><a href="#works">WORKS</a></li>
               <li class="header-nav-item"><a href="#PHOTO">PHOTO</a></li>
               <li class="header-nav-item"><a href="#contact">CONTACT</a></li>
-              <li class="header-nav-item"><a href="portfolio/unnotfound.html">more</a></li>
-              <li class="header-nav-item"><a href="https://ja.wikipedia.org/wiki/メインページ">Wikipedia</a></li>
+              <li class="header-nav-item"><a href="sub.html">SUB</a></li>
             </ul>
           </nav>
         </div>
