--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
     <title>PORTFOLIO</title>
-    <link href="css\style.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="portfolio/img/favicon.ico" />
   </head>
 
@@ -14,7 +14,7 @@
       <header class="header">
         <div class="inner">
           <h1 class="header-logo">
-            <a href=".">石岡　駿汰</a>
+            <a href="#">石岡　駿汰</a>
           </h1>
           <nav class="headerheader-nav">
             <ul class="header-nav-list">
@@ -33,7 +33,7 @@
         <!-- main-visual -->
         <div class="main-visual" id="#">
           <div class="main-visual-inner">
-            <p class="main-visual-title">石岡　駿汰</p>
+            <p class="main-visual-title">Ishioka Shunta</p>
             <p class="main-visual-subtitle">PORTFOLIO</p>
             <div class="main-visual-profile">
               <a class="main-visual-img">
@@ -55,6 +55,7 @@
                 <th>趣味</th>
                 <td>カラオケ・商業施設めぐり・北海道の道路マニア</td>
               </tr>
+
               <tr>
                 <th>アルバイト</th>
                 <td><a href="https://www.e-map.ne.jp/p/lawson/dtl/144934/?&his=cb">ローソン札幌美しが丘３条店</a></td>
@@ -65,11 +66,11 @@
               </tr>
               <tr>
                 <th>自己啓発</th>
-                <td>読書</td>
+                <td>天文学</td>
               </tr>
               <tr>
                 <th>信条</th>
-                <td>しない善よりする偽善</td>
+                <td>「しない善よりする偽善」</td>
               </tr>
             </table>
           </div>
@@ -82,7 +83,7 @@
             <div class="skill-list">
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="" />
                     </a>
                 </p>
                 <div class="skill-body">
@@ -94,7 +95,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">Python/Java</h3>
@@ -107,7 +108,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="" />
+                  <img src="img/25125_color.png" alt="" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">資格</h3>
@@ -121,7 +122,7 @@
               </div>
               <div class="skill-item">
                 <p class="skill-img">
-                  <img src="portfolio/img/25125_color.png" alt="Wikimedia財団のロゴ" />
+                  <img src="img/25125_color.png" alt="Wikimedia財団のロゴ" />
                 </p>
                 <div class="skill-body">
                   <h3 class="skill-name">そのほか</h3>
@@ -145,10 +146,10 @@
               <a class="works-item btn-denim" href="2.ensyu\ensyu01.html">ENSYU 01</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu02.html">ENSYU 02</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu03_1.html">ENSYU 03_1</a>
-              <a class="works-item btn-denim" href="2.ensyu\ensyu03_2.html">ENSYU 03_2</a>
-              <a class="works-item btn-denim" href="2.enysu\ensyu04-1.html">ENSYU 04_1</a>
-              <a class="works-item btn-denim" href="2.enysu\ensyu04-2.html">ENSYU 04_2</a>
-              <a class="works-item btn-denim" href="2.enysu\ensyu04-3.html">ENSYU 04_3</a>
+              <a class="works-item btn-denim" href="2.ensyu/ensyu03_2.html">ENSYU 03_2</a>
+              <a class="works-item btn-denim" href="2.ensyu/ensyu04_1.html">ENSYU 04_1</a>
+              <a class="works-item btn-denim" href="2.ensyu/ensyu04_2.html">ENSYU 04_2</a>
+              <a class="works-item btn-denim" href="2.ensyu/ensyu04_3.html">ENSYU 04_3</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu05.html">ENSYU 05</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu06_1.html">ENSYU 06_1</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu06_2_1.html">ENSYU 06_2</a>
@@ -161,6 +162,11 @@
               <a class="works-item btn-denim" href="2.ensyu\ensyu09_2.html">ENSYU 09_2</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu09_3.html">ENSYU 09_3</a>
               <a class="works-item btn-denim" href="2.ensyu\ensyu09_4.html">ENSYU 09_4</a>
+              <a class="works-item btn-box" href="2.ensyu/ensyu10_1.html">ensyu10_1</a>
+              <a class="works-item btn-box" href="2.ensyu/ensyu10_2.html">enysu10_2</a>
+              <a class="works-item btn-box" href="2.ensyu/ensyu11_1.html">ensyu11_1</a>
+              <a class="works-item btn-box" href="2.ensyu/ensyu11_2.html">ensyu11_2</a>
+
 
               <a class="works-item btn-box" href="#">CHALLENGE1</a>
               <a class="works-item btn-box" href="#">CHALLENGE2</a>
@@ -184,26 +190,35 @@
                 </section>
 
         <!-- contact -->
-        <section class="contact-section" id="contact">
-          <form action="#">
-            <h2 class="title">CONTACT</h2>
-            <p class="form-title">お名前<span class="must">必須</span></p>
-            <input type="text" name="shimei" size="98" required>
-            <p class="form-title">メールアドレス<span class="must">必須</span></p>
-            <input type="email" name="mail" size="98" required>
-            <p class="form-title">電話番号</p>
-            <input type="tel" name="tel" size="98" required>
-            <p class="form-title">お問い合わせ<span class="must">必須</span></p>
-            <textarea name="remarks" cols="100" rows="4" maxlength="40" required></textarea>
-            <br>
-            <div class="btn-item">
-            <input class="btn" type="submit" onclick="alert('ご登録ありがとうございました'); return false;" value="送信">
-            </div>
-          </form>
+        <section class="contact section" id="contact">
+        <div class="Form">
+          <h2 class="title">CONTACT</h2><br>
+          <div class="Form-Item">
+            <p class="Form-Item-Label">
+              <span class="Form-Item-Label-Required">必須</span>お名前
+            </p>
+            <input type="text" class="Form-Item-Input" placeholder="例）山田　太郎">
+          </div>
+          <div class="Form-Item">
+            <p class="Form-Item-Label"><span class="Form-Item-Label-Required">必須</span>メールアドレス</p>
+            <input type="email" class="Form-Item-Input" placeholder="例）info@example.com">
+          </div>
+          <div class="Form-Item">
+            <p class="Form-Item-Label">電話番号</p>
+            <input type="text" class="Form-Item-Input" placeholder="例）000-0000-0000">
+          </div>
+          <div class="Form-Item">
+            <p class="Form-Item-Label isMsg"><span class="Form-Item-Label-Required">必須</span>お問い合わせ内容</p>
+            <textarea class="Form-Item-Textarea"></textarea>
+          </div>
+          <input type="submit" class="Form-Btn" onclick="alert('送信しました'); return false;" value="送信する">
+        </div>
         </section>
 
+
+
         <div class="page-top">
-          <span class="material-icons-outlined">Page Top</span>
+          <span class="material-icons-outlined"><a class="page-top-color" href="#">Page Top</a></span>
         </div>
       </main>
       <!-- footer -->
