--- a/sub.html
+++ b/sub.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
     <title>sub_PORTFOLIO</title>
-    <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link href="portfolio/css/style.css" media="all" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="portfolio/img/favicon.ico" />
   </head>
 
   <body>
@@ -14,14 +14,17 @@
       <header class="header">
         <div class="inner">
           <h1 class="header-logo">
-            <a href=".">石岡　駿汰</a>
+            <a href="#">Parallel_traveler</a>
           </h1>
           <nav class="headerheader-nav">
             <ul class="header-nav-list">
-              <li class="header-nav-item"><a href="#skill">スキマスイッチ</a></li>
-              <li class="header-nav-item"><a href="#works">WORKS</a></li>
+              <li class="header-nav-item"><a href="#about">Real About</a></li>
+              <li class="header-nav-item"><a href="#SukimaSwitch">スキマスイッチ</a></li>
+              <li class="header-nav-item"><a href="#album">スキマスイッチのおすすめアルバム</a></li>
+              <li class="header-nav-item"><a href="#live-album">スキマスイッチ ライブアルバム一覧</a></li>
               <li class="header-nav-item"><a href="unnotfound.html">more</a></li>
-              <li class="header-nav-item"><a href="https://ja.wikipedia.org/wiki/メインページ">Wikipedia</a></li>
+              <li class="header-nav-item"><a href="#Wikipedia">Wikipedia</a></li>
+              <li class="header-nav-item"><a href="https://ja.wikipedia.org/wiki/メインページ">Wikipediaメインページ</a></li>
             </ul>
           </nav>
         </div>
@@ -35,7 +38,7 @@
             <p class="main-visual-subtitle">PORTFOLIO</p>
             <div class="main-visual-profile">
               <a class="main-visual-img">
-        <img src="img/Wikipedia-logo-v2.svg.png" alt="自画像" width="150" height="150">
+        <img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="自画像" width="150" height="150">
       </a>
       <p class="main-visual-text" id="age">
 
@@ -72,19 +75,86 @@
         <!-- /main-visual -->
 
         <!-- /about -->
+        <section class="about section" id="about">
+          <div class="inner">
+            <h2 class="title">Real About　～もっと書きたいおいらのこと～</h2>
+            <table>
+              <tr>
+                <th>趣味</th>
+                <td>カラオケ・商業施設めぐり・北海道の道路マニア</td>
+              </tr>
+              <tr>
+                <th>好きなアーティスト</th>
+                <td>スキマスイッチ・藤井風・竹内まりや・杉山清貴・本田美奈子</td>
+              </tr>
+              <tr>
+                <th>好きな曲</th>
+                <td>Lonelyの事情・魔法がかかった日・風よ・駅・ガラスのPALM TREE</td>
+              </tr>
+              <tr>
+                <th>所属団体</th>
+                <td>日本Wikimedia・Community</td>
+              </tr>
+              <tr>
+                <th>アルバイト</th>
+                <td><a href="https://www.e-map.ne.jp/p/lawson/dtl/144934/?&his=cb">ローソン札幌美しが丘３条店</a>（2021年10月～）</td>
+              </tr>
+              <tr>
+                <th>過去の所在地</th>
+                <td>岩内町→
+                釧路市→北斗市→旭川市</td>
+
+              <tr>
+                <th>信条</th>
+                <td>「誰かがやってくれるだろって待ってても、どうせだれもやってくれないんだから、俺がやるしかないだろ」</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+<!-- sukima switch -->
+        <section class="sukima-section" id="SukimaSwitch">
+          <div class="inner">
+            <h2 class="title">スキマスイッチ
+            </h2>
+            <div class="sub-body">
+              <div>
+                <h3 class="sub-title">圧倒的な音楽センス</h3>
+                <p class="sukima-p">
+                  スキマスイッチは、心に響くメロディと深い歌詞で多くのファンを魅了しています。その楽曲は時に心を温かく包み込み、時に力強く励ましてくれる存在です。<br>ただひたすら、「がんばれ！！」と松岡修造みたいな感じではなく、「一緒に行くから頑張ろう」みたいな優しく暖かい楽曲スタイルを20年以上貫いています。
+                </p>
+              </div>
+              <div>
+                <h3 class="sub-title">幅広い音楽スタイル</h3>
+                <p class="sukima-p">
+                  ポップからロック、ジャズまで、多彩なジャンルを自在に操るその音楽性は、常に新たな驚きを与えてくれます。どの曲も独自の世界観を持ち、その幅の広さが魅力です。
+                </p>
+              </div>
+              <div>
+                <h3 class="sub-title">感動のライブパフォーマンス</h3>
+                <p class="sukima-p">
+                  彼らのライブは、観客と一体になり感動を共有する特別な瞬間。15周年の横浜アリーナ公演「Reversible」のような、ユニークなセットリスト構成も話題となりました。
+                </p>
+              </div>
+              <div>
+                <h3 class="sub-title">飽くなき音楽への探求心</h3>
+                <p class="sukima-p">
+                  結成以来、常に新しい音楽表現を追求し続けるスキマスイッチ。その創造力と挑戦心が、長年にわたり愛される理由です。
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <!-- skill -->
-        <section class="skill section" id="skill">
-          <div class="inner">
+        <section class="album section" id="album">
+          <div class="album-body">
             <h2 class="title">スキマスイッチのおすすめアルバム</h2>
-            <div class="skill-list">
-              <div class="skill-item">
+            <div class="album-list">
                 <p class="skill-img">
-                  <a href="https://ja.wikipedia.org/wiki/メインページ"><img src="img/Wikipedia-logo-v2.svg.png" alt="Wikipediaのロゴ" />
+                  <a href="https://ja.wikipedia.org/wiki/メインページ"><img src="portfolio/img/Wikipedia-logo-v2.svg.png" alt="Wikipediaのロゴ" />
                     </a>
                 </p>
-                <div class="skill-body">
-            <h3>A museMentally</h3>
+            <h3 class="album-list h3">A museMentally</h3>
             <ul>
                 <li>1. Intro ～for Compact Disc～</li>
                 <li>2. ゼログラ</li>
@@ -98,16 +168,16 @@
                 <li>10. クライマル</li>
                 <li>11. 君と願いを</li>
             </ul>
-        </div>
+
     </div>
-    <div class="skill-item">
+    <div class="album-list">
         <p class="skill-img">
             <a href="https://www.lawson.co.jp/">
-                <img src="img/icon_skill.png" alt="">
+                <img src="portfolio/img/icon_skill.png" alt="">
             </a>
         </p>
-        <div class="skill-body">
-            <h3>夏雲ノイズ</h3>
+        <div class="album-list">
+            <h3 class="album-list h3">夏雲ノイズ</h3>
             <ul>
                 <li>1. 螺旋（らせん）</li>
                 <li>2. ふれて未来を</li>
@@ -124,12 +194,12 @@
             </ul>
         </div>
     </div>
-    <div class="skill-item">
+    <div class="album-list">
         <p class="skill-img">
-            <img src="img/icon_skill.png" alt="">
+            <img src="portfolio/img/icon_skill.png" alt="">
         </p>
-        <div class="skill-body">
-            <h3>ナユタとフカシギ</h3>
+        <div class="album-list">
+            <h3 class="album-list h3">ナユタとフカシギ</h3>
             <ul>
                 <li>1. 双星プロローグ</li>
                 <li>2. 雫</li>
@@ -145,12 +215,12 @@
             </ul>
         </div>
     </div>
-    <div class="skill-item">
+    <div class="album-list">
         <p class="skill-img">
-            <img src="img/Wikimedia-logo.svg.png" alt="Wikimedia財団のロゴ">
+            <img src="portfolio/img/Wikimedia-logo.svg.png" alt="Wikimedia財団のロゴ">
         </p>
         <div class="skill-body">
-            <h3>スキマスイッチ</h3>
+            <h3 class="album-list h3">スキマスイッチ</h3>
             <ul>
                 <li>1. ゲノム</li>
                 <li>2. パラボラヴァ</li>
@@ -170,6 +240,7 @@
         <!-- /skill -->
 
         <!-- works -->
+        <section class="live-album" id="live-album">
             <h1>スキマスイッチ ライブアルバム一覧</h1>
     <table>
         <tr>
@@ -191,10 +262,38 @@
         <tr><td>2023年2月15日</td><td><a href="https://ja.wikipedia.org/wiki/スキマスイッチ_TOUR_2022_%22café_au_lait%22">スキマスイッチ TOUR 2022 "café au lait"</a></td></tr>
         <tr><td>2024年4月17日</td><td><a href="https://ja.wikipedia.org/wiki/スキマスイッチ_20th_Anniversary_%22POPMAN%27S_WORLD_2023_Premium%22">スキマスイッチ 20th Anniversary "POPMAN'S WORLD 2023 Premium"</a></td></tr>
     </table>
+  </section>
         <!-- /works -->
 
+        <!-- Wikipedia -->
+        <section class="wiki-section" id="Wikipedia">
+          <div class="inner">
+            <h2 class="title">Wikipedia</h2>
+            <table>
+              <tr>
+                <th>所属団体</th>
+                <td>日本Wikimedia・Community</td>
+              </tr>
+              <tr>
+                <th>所属日</th>
+                <td>2021年7月30日</td>
+              </tr>
+              <tr>
+                <th>主な作成記事</th>
+                <td><a href="https://ja.wikipedia.org/wiki/Microsoft_Windows_10X">Microsoft Windows 10X</a>・<a href="https://ja.wikipedia.org/wiki/ザ・マンション・キャット">The Mansion Cat</a>
+                </td>
+              </tr>
+              <tr>
+                <th>役職</th>
+                <td>編集者・巻き戻し者</td>
+              </tr>
+
+            </table>
+          </div>
+        </section>
+
         <div class="page-top">
-          <span class="material-icons-outlined">Page Top</span>
+          <span class="material-icons-outlined"><a class="page-top-color" href="#">Page Top</a></span>
         </div>
       </main>
       <!-- footer -->
